--- a/app.ui
+++ b/app.ui
@@ -58,6 +58,9 @@
        </item>
        <item row="6" column="0" colspan="2">
         <widget class="QPushButton" name="pushButton">
+         <property name="cursor">
+          <cursorShape>PointingHandCursor</cursorShape>
+         </property>
          <property name="text">
           <string>打开串口</string>
          </property>
@@ -262,6 +265,9 @@
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
+       <property name="cursor">
+        <cursorShape>PointingHandCursor</cursorShape>
+       </property>
        <property name="text">
         <string>清空接收</string>
        </property>
@@ -284,6 +290,9 @@
          <width>0</width>
          <height>0</height>
         </size>
+       </property>
+       <property name="cursor" stdset="0">
+        <cursorShape>IBeamCursor</cursorShape>
        </property>
       </widget>
      </item>
@@ -323,6 +332,9 @@
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
+         </property>
+         <property name="cursor">
+          <cursorShape>PointingHandCursor</cursorShape>
          </property>
          <property name="text">
           <string>发送</string>
